tests/paczka1/small_fuzzy/75750170.err
Error in line 3: 8qI S881 19,5
Error in line 2: A112 A112 5,6
Error in line 9: A112 A942 34,45
Error in line 7: A112 S881 65,4
Error in line 14: A112 A942 73,1
